manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  namespace: easterhegg21
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:green
        ports:
        - containerPort: 8080  # Specifies the port the container exposes
