manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: easterhegg21
spec:
  selector:
    app: webserver  # Matches the label of the Deployment's Pods
  ports:
    - protocol: TCP
      port: 80  # The port the service is exposed on.
      targetPort: 3000  # The target port on the Pod containers.
